--- a/tuhuan.html
+++ b/tuhuan.html
@@ -98,9 +98,20 @@
 
             </div>
             <div class="container-text">
-                <p>途欢健康，协同于现有的医疗服务体系，致力于构建更精准的医疗保健模式</p>
-                <p>途欢健康，以信息技术为基础，移动互联网平台为工具、以三甲医院医生、社区医院医生、医生助理组成的"责任医疗团队"</p>
-                <p>为大众提供基于个体与疾病的主动管理式医疗服务</p>
+                <p class="p-1">途欢健康，协同于现有的医疗服务体系，致力于构建更精准的医疗保健模式</p>
+                <p class="p-2">途欢健康，以信息技术为基础，移动互联网平台为工具、以三甲医院医生、社区医院医生、医生助理组成的"责任医疗团队"</p>
+                <p class="p-2">为大众提供基于个体与疾病的主动管理式医疗服务</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="sixth">
+        <div class="sixth-footer">
+            <div class="copyright">
+                Copyright © 2018 途欢医疗健康科技有限公司 蜀ICP备15025302号-1
+            </div>
+            <div>
+
             </div>
         </div>
     </div>
