--- a/tuhuan.html
+++ b/tuhuan.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="container">
+        <div class="header-container">
             <div class="row">
                 <div class="background">
                     <div class="logo"></div>
@@ -27,8 +27,9 @@
             </div>
         </div>
     </div>
-    <div class="mid-img"></div>
-    <div class="second">
+
+<div class="mid-img"></div>
+    <div class="container">
         <div class="second-top">
             <h3>源自医疗、助力医疗、根植医疗</h3>
             <p class="line"></p>
@@ -37,23 +38,24 @@
             <p class="line-bottom-1">途欢，帮助您获得更便捷的医疗健康服务与更优质的健康维护方案</p>
         </div>
         <div class="square">
-            <div class="puhui">
-                <div class="img"></div>
-                <h4>普惠</h4>
-                <div class="text">为大众提供更高品质的医疗健康服务</div>
-                <div class="text2">帮助大众在健康维护中获益</div>
-            </div>
-            <div class="puhui">
-                <div class="chuangxin-img"></div>
-                <h4>创新</h4>
-                <div class="text">协同现有医疗体系，以主动管理式医疗服务</div>
-                <div class="text2">更好的维护大众健康、实现价值医疗</div>
-            </div>
-            <div class="puhui">
-                <div class="chonggou-img"></div>
-                <h4>重构</h4>
-                <div class="text">以前瞻视野重构医疗健康服务模式</div>
-                <div class="text2">实现大众健康价值与医生医疗价值回归</div>
+                <div class="puhui">
+                    <div class="img"></div>
+                    <h4>普惠</h4>
+                    <div class="text">为大众提供更高品质的医疗健康服务</div>
+                    <div class="text2">帮助大众在健康维护中获益</div>
+                </div>
+                <div class="puhui">
+                    <div class="chuangxin-img"></div>
+                    <h4>创新</h4>
+                    <div class="text">协同现有医疗体系，以主动管理式医疗服务</div>
+                    <div class="text2">更好的维护大众健康、实现价值医疗</div>
+                </div>
+                <div class="puhui">
+                    <div class="chonggou-img"></div>
+                    <h4>重构</h4>
+                    <div class="text">以前瞻视野重构医疗健康服务模式</div>
+                    <div class="text2">实现大众健康价值与医生医疗价值回归</div>
+                </div>
             </div>
         </div>
     </div>
@@ -82,7 +84,7 @@
     </div>
 
     <div class="forth">
-        <div class="content">
+        <div class="forth-content">
             途欢的愿景
             <p class="line"></p>
             <div id="forthText">
@@ -93,26 +95,36 @@
     </div>
 
     <div class="fifth">
-        <div class="container">
-            <div class="container-pic">
-
-            </div>
-            <div class="container-text">
-                <p class="p-1">途欢健康，协同于现有的医疗服务体系，致力于构建更精准的医疗保健模式</p>
-                <p class="p-2">途欢健康，以信息技术为基础，移动互联网平台为工具、以三甲医院医生、社区医院医生、医生助理组成的"责任医疗团队"</p>
-                <p class="p-2">为大众提供基于个体与疾病的主动管理式医疗服务</p>
-            </div>
+        <div class="fifth-container">
+                <div class="fifth-content">
+                    <div class="container-pic"></div>
+                    <div class="container-text">
+                        <p class="p-1">途欢健康，协同于现有的医疗服务体系，致力于构建更精准的医疗保健模式</p>
+                        <p class="p-2">途欢健康，以信息技术为基础，移动互联网平台为工具、以三甲医院医生、社区医院医生、医生助理组成的"责任医疗团队"</p>
+                        <p class="p-2">为大众提供基于个体与疾病的主动管理式医疗服务</p>
+                    </div>
+                </div>
         </div>
     </div>
 
     <div class="sixth">
         <div class="sixth-footer">
-            <div class="copyright">
-                Copyright © 2018 途欢医疗健康科技有限公司 蜀ICP备15025302号-1
+            <div class="six-left">
+                <div class="links">
+                    <a href="#">公司动态</a>
+                    <div class="bor-line"></div>
+                    <a href="#">加入我们</a>
+                    <div class="bor-line"></div>
+                    <a href="#">企业用户</a>
+                    <div class="bor-line"></div>
+                    <a href="#">用户使用协议</a>
+                </div>
+                <div class="copyright">
+                    Copyright © 2018 途欢医疗健康科技有限公司 蜀ICP备15025302号-1
+                </div>
             </div>
-            <div>
-
-            </div>
+            <div class="weixin"></div>
+            <div class="phone"></div>
         </div>
     </div>
 </body>
